# FunToken-rs

./: Cargo.toml  README.md  build.sh
src/: lib.rs  mintable.rs
