[package]
name = "FunToken"
version = "0.2.0"
authors = ["Hackumenta"]
edition = "2020"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { path = "../../near-sdk" }
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
eth-types =  { path = "../eth-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.6.2"
rlp = "0.4.2"
ethabi = "12.0.0"
hex = "0.4.2"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []
